--- a/package.json
+++ b/package.json
@@ -87,9 +87,7 @@
     "vue-template-compiler": "2.1.10",
     "webpack": "2.2.1"
   },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run testsingle"
-    }
+  "dependencies": {
+    "tslib": "^1.9.3"
   }
 }
