--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "build_dev": "webpack --mode=development",
     "build_prod": "webpack --mode=production",
+    "build_components": "vue-cli-service build --target wc --name v-table ./src/components/*.vue",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "watch_dev": "webpack --env.buildType dev --env.platform vue --watch"
   },
