--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "build_dev": "webpack --mode=development",
     "build_prod": "webpack --mode=production",
     "build_components": "vue-cli-service build --target wc --name v-table ./src/components/*.vue",
+    "build": "webpack --mode=development && webpack --mode=production",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "watch_dev": "webpack --env.buildType dev --env.platform vue --watch"
   },
