--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "private": true,
   "devDependencies": {
     "@types/node": "^12.12.16",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.2.0",
     "css-loader": "^3.2.1",
     "fibers": "^4.0.2",
     "file-loader": "^5.0.2",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
