--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "private": true,
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@types/node": "^12.12.16",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.0",
@@ -28,6 +32,8 @@
     "vue-property-decorator": "^8.3.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vuetify": "^2.2.6",
+    "vuetify-loader": "^1.4.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
