--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "build_dev": "webpack --mode=development",
-		"build_prod": "webpack --mode=production",
-		"build_library": "webpack --mode=development && webpack --mode=production",
-    "build_component": "vue-cli-service build --dest ./build/wc --target wc --name survey-viewer ./src/main.vue",
-    "build": "npm run build_component && npm run build_library",
+    "dev": "webpack --mode=development",
+    "prod": "webpack --mode=production",
+    "library": "webpack --mode=development && webpack --mode=production",
+    "component": "vue-cli-service build --dest ./build/wc --target wc --name survey-viewer ./src/main.vue",
+    "all": "npm run component && npm run library",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "watch_dev": "webpack --env.buildType dev --env.platform vue --watch"
   },
@@ -35,5 +35,8 @@
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
